@@ -1,0 +1,11 @@
+export(besselRatio)
+export(distIneqMassart)
+export(integrateDens)
+export(inversionTestpq,inversionTestqp)
+export(is.wholenumber)
+export(logHist)
+export(momChangeAbout)
+export(momIntegrated)
+export(momSE)
+export(safeIntegrate)
+export(skewness,kurtosis)
